# ki_rwu_c

./: CMakeLists.txt  README.md
include/: lib_ki_rwu_c.h
src/search/: node.c  node.h
src/search/uninformed/: uninformed_search.c  uninformed_search.h
test/search/: node_test.c
test/search/eightpuzzle/: dyn_2d_int_array.c  dyn_2d_int_array.h  eightpuzzle_test.c  example_eightpuzzle.c  example_eightpuzzle.h  util.c  util.h
test/search/uninformed/: breadth_first_search_test.c  depth_first_search_test.c
tests/search/: node_test.c
